# cpp-tagval

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  meson.build  meson.options
.github/workflows/: ci.yml  docs.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake  tagvalConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  closed_ended.cpp  extern_entries.cpp  formatting.cpp  json_integration.cpp  meson.build  metadata.cpp  open_ended.cpp  parcel_integration.cpp
include/tagval/: base.hpp  closed_ended.hpp  descriptor.hpp  entry.hpp  error.hpp  fixed_string.hpp  format.hpp  hash.hpp  json_nlohmann.hpp  kind_registry.hpp  macros.hpp  meson.build  open_ended.hpp  openended_registry.hpp  ostream.hpp  parcel.hpp  tagval.hpp  values.hpp  version.hpp.in
subprojects/: commons.wrap  nlohmann_json.wrap
tests/: CMakeLists.txt  meson.build  test_closed_ended.cpp  test_closed_static_assert.cpp  test_cross_kind.cpp  test_descriptor.cpp  test_entry_as.cpp  test_format.cpp  test_handle_basics.cpp  test_hash.cpp  test_json.cpp  test_kind_registry.cpp  test_open_ended.cpp  test_open_extern.cpp  test_ostream.cpp  test_parcel.cpp
tests/extern_split/: kind.hpp  test_extern_split.cpp  vendor_a.cpp  vendor_b.cpp
